2016-06-04  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/71405
	* tree-ssa.c (execute_update_addresses_taken): For clobber with
	incompatible type, build a new clobber with the right type instead
	of building a VIEW_CONVERT_EXPR around it.

2016-06-04  Oleg Endo  <olegendo@gcc.gnu.org>

	PR tree-optimization/52171
	* config/sh/sh.c (sh_use_by_pieces_infrastructure_p): Use
	by_pieces_ninsns instead of move_by_pieces_ninsns.

2016-06-04  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.c (sh_print_operand_address): Don't use hardcoded 'r0'
	for reg+reg addressing mode.

2016-06-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* rs6000-c.c (c/c-tree.h): Add #include.
	(altivec_resolve_overloaded_builtin): Handle ARRAY_TYPE arguments
	in C++ when found in the base position of vec_ld or vec_st.

2016-06-03  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-loop-niter.c (estimate_numbers_of_iterations_loop): Avoid
	use of profile unless profile status is PROFILE_READ.
	* profile.c (compute_branch_probabilities): Set profile status
	only after reporting predictor hitrates.

2016-06-03  Joseph Myers  <joseph@codesourcery.com>

	PR target/71276
	PR target/71277
	* common.opt (ffp-int-builtin-inexact): New option.
	* doc/invoke.texi (-fno-fp-int-builtin-inexact): Document.
	* doc/md.texi (floor@var{m}2, btrunc@var{m}2, round@var{m}2)
	(ceil@var{m}2): Document dependence on this option.
	* ipa-inline-transform.c (inline_call): Handle
	flag_fp_int_builtin_inexact.
	* ipa-inline.c (can_inline_edge_p): Likewise.
	* config/i386/i386.md (rintxf2): Do not test
	flag_unsafe_math_optimizations.
	(rint<mode>2_frndint): New define_insn.
	(rint<mode>2): Do not test flag_unsafe_math_optimizations for 387
	or !flag_trapping_math for SSE.  Just use gen_rint<mode>2_frndint
	for 387 instead of extending and truncating.
	(frndintxf2_<rounding>): Test flag_fp_int_builtin_inexact ||
	!flag_trapping_math instead of flag_unsafe_math_optimizations.
	Change to frndint<mode>2_<rounding>.